bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/MyIDM_User_Provisioning__mdt.object-meta.xml
<CustomObject>
    <label>MyIDM User Provisioning</label>
    <pluralLabel>MyIDM User Provisionings</pluralLabel>
</CustomObject>