bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Location_Access__c.field-meta.xml
<CustomField>
    <fullName>Location_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Access</label>
    <type>Checkbox</type>
</CustomField>