bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Mobile_Persona__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Persona__c</fullName>
    <description>Additional field for mobile persona</description>
    <label>Mobile Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>