bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Permission_Set_Groups__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Groups__c</fullName>
    <label>Permission Set Groups API Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>