bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Permission_Set_License_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_License_Assignment__c</fullName>
    <label>Permission Set License Assignment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>