bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>