bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>