bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Requesting_Apps__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Apps__c</fullName>
    <description>This field captures all the apps (For Ex: Savvy  or SFS) that can request user creation using this persona. APP&apos;s should be delimited using semi-colon delimiter</description>
    <label>Requesting Apps</label>
    <length>100</length>
    <type>Text</type>
</CustomField>