bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/send_to_Hub__c.field-meta.xml
<CustomField>
    <fullName>send_to_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>a checkbox to decide send to hub or not</description>
    <label>send to Hub</label>
    <type>Checkbox</type>
</CustomField>