bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>