bundled_metadata/force-app/main/default/objects/MyIDM_User_Provisioning__mdt/listViews/All_with_Key_Fields.listView-meta.xml
<ListView>
    <fullName>All_with_Key_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Persona__c</columns>
    <columns>Profile__c</columns>
    <columns>Permission_Set_Groups__c</columns>
    <columns>Permission_Set_Name__c</columns>
    <columns>Permission_Set_License_Assignment__c</columns>
    <columns>send_to_Hub__c</columns>
    <columns>Location_Access__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Key Fields</label>
    <language>en_US</language>
</ListView>